# Pazy-MCP-Vercel

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
data/rag/: pazy_faq.yaml
data/rag/pazy_faiss/: index.faiss  index.pkl
dev/: .config  aux_functions.py  pricing-widget.html  server.py  server_ui.py  users_control.py
dev/RAG/: pazy_faq.yaml  pazy_manual_marca.yaml
dev/RAG/pazy_faiss/: index.faiss  index.pkl
dev/tools/tool_1/: subgraph_tool_1.py
dev/tools/tool_1/nodes/: llamada_api.py  respuesta_pricing.py  tratar_datos.py
dev/tools/tool_2_3/: rag_store.py
public/: pricing-widget.html  pricing-widget_save.html
tests/: test_client_pricing_debug.py  test_client_tool1.py  test_client_tool2.py
