[project]
name = "mcp_pazy"
version = "0.1.0"
description = "Pazy MCP server"
authors = [
    {name = "iagopdiaz", email = "iago.pdiaz@udc.es"},
    {name = "IagoSuntzu", email = "iago@suntzu-growth.com"},
]

dependencies = [
    "langgraph>=1.0.8",
    "openpyxl>=3.1.5",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
    "langchain==1.2.9",
    "langchain-core==1.2.9",
    "langchain-openai==1.1.8",
    "langchain-anthropic>=1.3.2",
    "anthropic>=0.84.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "faiss-cpu>=1.13.2",
    "pypdf>=6.7.5",
    "pyyaml==6.0.3",
    "uvicorn[standard]>=0.41.0",
    "fastmcp>=3.1.1",
]

requires-python = ">=3.12,<3.13"
license = {text = "MIT"}

[dependency-groups]
docker = [
    "numpy<2",
    "sentence-transformers>=5.2.3",
    "langchain-huggingface>=1.2.0",
    "pyodbc>=5.3.0",
]


[tool.pdm]
distribution = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pdm.scripts]
dev_ui = "python ./dev/server_ui.py"
test_1 = "python ./tests/test_client_tool1.py"
test_2 = "python ./tests/test_client_tool2.py"
test_ui = "python ./tests/test_client_pricing_debug.py"